# regmar

./: package.json
backend/: .dockerignore  .gitignore  Dockerfile  docker-compose.yml  env.example  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json
backend/data/: EQUITY_L.csv
backend/python/: pyproject.toml
backend/python/app/: README.md  main.py  schemas.py  train_classifier.py  train_type_classifier.py
backend/python/app/controllers/: ml.py
backend/python/app/ml/: classifier.py  ner.py  split.py  train_classifier.py  train_type_classifier.py  type_classifier.py
backend/python/app/routers/: ml.py
backend/python/ultimate_portfolio/: analyze.py  core.py  pyproject.toml  requirements.txt
backend/scripts/: convert_labelstudio_to_spacy_direct.py
backend/src/: index.ts
backend/src/controllers/: accounts.ts  ai.ts  auth.ts  investments.ts  linkedAccounts.ts  nerFeedback.ts  optimize.ts  sync.ts  transactions.ts  users.ts
backend/src/db/: categoryModel.ts  domainModel.ts  investmentModel.ts  nerTrainingModel.ts  parserConfigModel.ts  (+4 more)
frontend/: .dockerignore  .prettierignore  .prettierrc  Dockerfile  next.config.ts  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.ts
frontend/app/: globals.css  layout.tsx  not-found.tsx  page.tsx
frontend/components/: amount-input.tsx  app-mark.tsx  auth-form.tsx  bottom-navbar.tsx  category-icon.tsx  mode-toggle.tsx  setup-prompts.tsx  spinner.tsx
frontend/hooks/: use-scroll-top.tsx
frontend/lib/: logos.ts  transactions.ts  utils.ts
frontend/redux/: hooks.ts  provider.tsx  store.ts
(+64 files in other folders)
